Trying to fix spacing on title and on the header table.  Also making rounding less dramatic on overall corners of page.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@
 
 @keyframes typing {
 	0% {width: 0%}
-	100% {width: 90vw}
+	100% {width: 100%}
 }
 
 @keyframes blink-caret {
@@ -50,8 +50,8 @@ a:hover {
 .on_background {
 	background-color: rgba(0, 0, 0, 0.8);
 	min-height: 98vh;
-	border-radius: 100px;
-	padding: 100px;
+	border-radius: 50px;
+	padding: 30px;
 }
 
 .content {
@@ -168,10 +168,7 @@ a:hover {
 
 .website_header_item {
 	white-space: nowrap;
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding:5px;
 	background-color: none;
     color:white;
 	font-size: 20px;
